--- a/docs/gram/examples/creating-taskmaster-mcp-server.mdx
+++ b/docs/gram/examples/creating-taskmaster-mcp-server.mdx
@@ -167,6 +167,92 @@ The authenticated server configuration looks something like this:
 }
 ```
 
+## Extending your MCP server with Gram Functions
+
+While the tools generated from your OpenAPI document handle basic CRUD operations, you can extend your MCP server with custom logic using [Gram Functions](/docs/gram/concepts/functions). This is useful for adding business logic that goes beyond simple API calls.
+
+For example, let's add a function that sends email reminders to users about their pending tasks. We'll use [Resend](https://resend.com) for sending emails. You can sign up for a free account and get an API key from their dashboard.
+
+### Creating a task reminder function
+
+1. Create a new Gram function project:
+```bash
+   pnpm create @gram-ai/function@latest --template gram
+```
+
+2. Replace the contents of `gram.ts` with the following code:
+```ts
+import { Gram } from "@gram-ai/functions";
+import * as z from "zod/mini";
+import { Resend } from "resend";
+
+const resend = new Resend(process.env.RESEND_API_KEY);
+
+const gram = new Gram().tool({
+  name: "send_email",
+  description: "Send an email using Resend",
+  inputSchema: {
+    email: z.string(),
+    subject: z.string(),
+    text: z.string(),
+  },
+  async execute(ctx, input) {
+    try {
+      const result = await resend.emails.send({
+        from: "Acme <onboarding@resend.dev>",
+        to: [input["email"]],
+        subject: input["subject"],
+        html: `<p>${input["text"]}</p>`,
+      });
+
+      return ctx.json({
+        success: true,
+        id: result.data?.id,
+        message: "Email sent successfully",
+      });
+    } catch (error) {
+      return ctx.fail(
+        {
+          error: "Failed to send email",
+          details: error instanceof Error ? error.message : String(error),
+        },
+        { status: 500 }
+      );
+    }
+  },
+});
+
+export default gram;
+```
+
+The code above creates a Gram function called `send_email` that accepts an email address, task title, and description as validated inputs using Zod schemas. The function uses the Resend API to send formatted HTML emails, with comprehensive error handling using `ctx.fail()` to return structured error responses with appropriate HTTP status codes, and `ctx.json()` to return successful results with the email message ID.
+
+3. Build and deploy the function:
+
+```bash
+   pnpm build
+   pnpm push
+```
+
+4. In the Gram dashboard, go to **Toolsets**, click on the **Taskmaster** toolset, click **Add Tool**, select the newly created function, and save the changes.
+
+   ![Screenshot showing the Add Tool dialog with the send_email function selected](./assets/add-function-to-toolset.png)
+
+5. Update the environment variables by going to the **Auth** tab and clicking on the **+ ADD NEW** button.
+
+   ![Screenshot of the Auth tab showing the Add New button for environment variables](./assets/add-new-environment-variable.png)
+
+6. Then, select the correct environment and add a new variable `RESEND_API_KEY` with your Resend API key, and save the environment.
+
+   ![Screenshot showing the environment configuration dialog with RESEND_API_KEY variable being added](./assets/configure-resend-api-key.png)
+
+Now the MCP server includes both the auto-generated CRUD tools from your OpenAPI document AND a custom function for sending task reminders. 
+
+You can now ask their AI assistant to "send a reminder email about the 'Complete documentation' task to user@example.com".
+
+![Testing the send email tool](./assets/testing-the-send-email-function.png)
+
+
 ## Testing the MCP server
 
 Before connecting to external clients, test your setup by using the **Gram Playground** to verify that your tools are working correctly.
