--- a/docs/gram/examples/creating-taskmaster-mcp-server.mdx
+++ b/docs/gram/examples/creating-taskmaster-mcp-server.mdx
@@ -246,9 +246,13 @@ The code above creates a Gram function called `send_email` that accepts an email
 
    ![Screenshot showing the environment configuration dialog with RESEND_API_KEY variable being added](./assets/configure-resend-api-key.png)
 
-Now the MCP server includes both the auto-generated CRUD tools from your OpenAPI document AND a custom function for sending task reminders. 
+Now the MCP server includes both the auto-generated CRUD tools from your OpenAPI document and a custom function for sending task reminders. 
 
-You can now ask their AI assistant to "send a reminder email about the 'Complete documentation' task to user@example.com".
+You can test the tool in the Playground with the following prompt: 
+
+```txt
+Please send an email to user@example.com to remind them of the pending tasks.
+```
 
 ![Testing the send email tool](./assets/testing-the-send-email-function.png)
 
